// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/ScoreBox/ScoreContent/HighScoresForOneSong should match snapshot is not played by hive 1`] = `
.c2 {
  margin: 1px 2px 1px 2px;
  max-height: 20px;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  min-width: 50px;
}

.c0 {
  color: #00111f!important;
  min-width: 30px;
}

.c3 {
  max-width: 50px;
  max-height: 30px;
  border-radius: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

<tr
  class=""
  data-testid="highscore-for-one-song"
>
  <td>
    <span
      class="badge bg-primary c0"
    >
      2
    </span>
  </td>
  <td>
    <div
      class="c1"
    >
      <span
        class="c2 badge badge-danger"
      >
        Expert+
      </span>
      <img
        alt="Cover of It has Begun"
        class="c3"
        src="https://new.scoresaber.com/api/static/covers/32C3A0E1FEE9FD589B795941B6D79AFE8061D30A.png"
      />
      <span
        class="badge bg-dark"
      >
        Starset
         - 
        It has Begun
        <span
          class="greyed-out"
        >
           by 
          Joshabi
        </span>
      </span>
    </div>
  </td>
  <td>
    <span
      class="badge bg-primary"
      id="badge-light"
    >
      1000
    </span>
  </td>
  <td
    class="time"
  >
    <b
      class="card-link"
    >
      in 16 days
    </b>
  </td>
</tr>
`;

exports[`components/common/ScoreBox/ScoreContent/HighScoresForOneSong should match snapshot is played by hive 1`] = `
.c2 {
  margin: 1px 2px 1px 2px;
  max-height: 20px;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  min-width: 50px;
}

.c0 {
  color: #00111f!important;
  min-width: 30px;
}

.c3 {
  max-width: 50px;
  max-height: 30px;
  border-radius: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
}

<tr
  class="played-by-hive-won"
  data-testid="highscore-for-one-song"
>
  <td>
    <span
      class="badge bg-primary c0"
    >
      2
    </span>
  </td>
  <td>
    <div
      class="c1"
    >
      <span
        class="c2 badge badge-danger"
      >
        Expert+
      </span>
      <img
        alt="Cover of Let us make a deal"
        class="c3"
        src="https://new.scoresaber.com/api/static/covers/32C3A0E1FEE9FD589B795941B6D79AFE8061D30B.png"
      />
      <span>
        <i
          class="far fa-handshake"
        />
      </span>
      <span
        class="badge bg-dark"
      >
        Stray from the Path
         - 
        Let us make a deal
        <span
          class="greyed-out"
        >
           by 
          Joshabi
        </span>
      </span>
    </div>
  </td>
  <td>
    <span
      class="badge bg-primary"
      id="badge-light"
    >
      2000
    </span>
  </td>
  <td
    class="time"
  >
    <b
      class="card-link"
    >
      in 10 months
    </b>
  </td>
</tr>
`;
